# pro5

backend/: pyproject.toml
backend/bloodbackend/: db.sqlite3  manage.py
backend/bloodbackend/bloodbackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/bloodbackend/user_api/: models.py  serializers.py  urls.py  validations.py  views.py
backend/bloodbackend/user_api/migrations/: 0001_initial.py  0002_patientblood.py
blood-donation-website/: package-lock.json  package.json
blood-donation-website/src/: AboutUs.js  App.js  ContactUs.js  Navbar.js  Staff-Singup-Login.js  Staff.js  StaffSignupLogin.css  User-Singup-Login.js  index.js  styles.css
blood-donation-website/src/components/: ContactUs.js  Footer.js  Home.js  Loader.js  Navbar.js  NotFoundPage.js  Staff-Singup-Login.js  Staff-Singup.js  User-Singup-Login.js  staff-login.js
blood-donation-website/src/pages/: AboutUs.js  ContactUs.js  Home.js  User.js
blood-donation-website/src/style/: AboutUs.css  App.css  ContactUs.css  Footer.css  Home.css  Loader.css  Navbar.css  NotFoundPage.css  StaffSignupLogin.css  User.css  UserSignupLogin.css  styles.css
blood-donation-website/src/tests/: AboutUs.test.js  App.test.js  ContactUs.test.js  Footer.test.js  Home.test.js  Navbar.test.js  NotFoundPage.test.js  Staff-Singup-Login.test.js  User-Singup-Login.test.js
