[tool.poetry]
name = "django backend"
version = "0.1.0"
description = ""
authors = ["faizanalii <ch.faizan15a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-filter = "^23.5"
markdown = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
